docs/upbound-provider-aws/0.31/sagemaker/v1beta1/model.md
---
permalink: /upbound-provider-aws/0.31/sagemaker/v1beta1/model/
---

# sagemaker.v1beta1.model

"Model is the Schema for the Models API. Provides a SageMaker model resource."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withContainer(container)`](#fn-specforproviderwithcontainer)
    * [`fn withContainerMixin(container)`](#fn-specforproviderwithcontainermixin)
    * [`fn withEnableNetworkIsolation(enableNetworkIsolation)`](#fn-specforproviderwithenablenetworkisolation)
    * [`fn withExecutionRoleArn(executionRoleArn)`](#fn-specforproviderwithexecutionrolearn)
    * [`fn withInferenceExecutionConfig(inferenceExecutionConfig)`](#fn-specforproviderwithinferenceexecutionconfig)
    * [`fn withInferenceExecutionConfigMixin(inferenceExecutionConfig)`](#fn-specforproviderwithinferenceexecutionconfigmixin)
    * [`fn withPrimaryContainer(primaryContainer)`](#fn-specforproviderwithprimarycontainer)
    * [`fn withPrimaryContainerMixin(primaryContainer)`](#fn-specforproviderwithprimarycontainermixin)
    * [`fn withRegion(region)`](#fn-specforproviderwithregion)
    * [`fn withTags(tags)`](#fn-specforproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specforproviderwithtagsmixin)
    * [`fn withVpcConfig(vpcConfig)`](#fn-specforproviderwithvpcconfig)
    * [`fn withVpcConfigMixin(vpcConfig)`](#fn-specforproviderwithvpcconfigmixin)
    * [`obj spec.forProvider.container`](#obj-specforprovidercontainer)
      * [`fn withContainerHostname(containerHostname)`](#fn-specforprovidercontainerwithcontainerhostname)
      * [`fn withEnvironment(environment)`](#fn-specforprovidercontainerwithenvironment)
      * [`fn withEnvironmentMixin(environment)`](#fn-specforprovidercontainerwithenvironmentmixin)
      * [`fn withImage(image)`](#fn-specforprovidercontainerwithimage)
      * [`fn withImageConfig(imageConfig)`](#fn-specforprovidercontainerwithimageconfig)
      * [`fn withImageConfigMixin(imageConfig)`](#fn-specforprovidercontainerwithimageconfigmixin)
      * [`fn withMode(mode)`](#fn-specforprovidercontainerwithmode)
      * [`fn withModelDataUrl(modelDataUrl)`](#fn-specforprovidercontainerwithmodeldataurl)
      * [`obj spec.forProvider.container.imageConfig`](#obj-specforprovidercontainerimageconfig)
        * [`fn withRepositoryAccessMode(repositoryAccessMode)`](#fn-specforprovidercontainerimageconfigwithrepositoryaccessmode)
        * [`fn withRepositoryAuthConfig(repositoryAuthConfig)`](#fn-specforprovidercontainerimageconfigwithrepositoryauthconfig)
        * [`fn withRepositoryAuthConfigMixin(repositoryAuthConfig)`](#fn-specforprovidercontainerimageconfigwithrepositoryauthconfigmixin)
        * [`obj spec.forProvider.container.imageConfig.repositoryAuthConfig`](#obj-specforprovidercontainerimageconfigrepositoryauthconfig)
          * [`fn withRepositoryCredentialsProviderArn(repositoryCredentialsProviderArn)`](#fn-specforprovidercontainerimageconfigrepositoryauthconfigwithrepositorycredentialsproviderarn)
    * [`obj spec.forProvider.executionRoleArnRef`](#obj-specforproviderexecutionrolearnref)
      * [`fn withName(name)`](#fn-specforproviderexecutionrolearnrefwithname)
      * [`obj spec.forProvider.executionRoleArnRef.policy`](#obj-specforproviderexecutionrolearnrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderexecutionrolearnrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderexecutionrolearnrefpolicywithresolve)
    * [`obj spec.forProvider.executionRoleArnSelector`](#obj-specforproviderexecutionrolearnselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderexecutionrolearnselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderexecutionrolearnselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderexecutionrolearnselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.executionRoleArnSelector.policy`](#obj-specforproviderexecutionrolearnselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderexecutionrolearnselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderexecutionrolearnselectorpolicywithresolve)
    * [`obj spec.forProvider.inferenceExecutionConfig`](#obj-specforproviderinferenceexecutionconfig)
      * [`fn withMode(mode)`](#fn-specforproviderinferenceexecutionconfigwithmode)
    * [`obj spec.forProvider.primaryContainer`](#obj-specforproviderprimarycontainer)
      * [`fn withContainerHostname(containerHostname)`](#fn-specforproviderprimarycontainerwithcontainerhostname)
      * [`fn withEnvironment(environment)`](#fn-specforproviderprimarycontainerwithenvironment)
      * [`fn withEnvironmentMixin(environment)`](#fn-specforproviderprimarycontainerwithenvironmentmixin)
      * [`fn withImage(image)`](#fn-specforproviderprimarycontainerwithimage)
      * [`fn withImageConfig(imageConfig)`](#fn-specforproviderprimarycontainerwithimageconfig)
      * [`fn withImageConfigMixin(imageConfig)`](#fn-specforproviderprimarycontainerwithimageconfigmixin)
      * [`fn withMode(mode)`](#fn-specforproviderprimarycontainerwithmode)
      * [`fn withModelDataUrl(modelDataUrl)`](#fn-specforproviderprimarycontainerwithmodeldataurl)
      * [`obj spec.forProvider.primaryContainer.imageConfig`](#obj-specforproviderprimarycontainerimageconfig)
        * [`fn withRepositoryAccessMode(repositoryAccessMode)`](#fn-specforproviderprimarycontainerimageconfigwithrepositoryaccessmode)
        * [`fn withRepositoryAuthConfig(repositoryAuthConfig)`](#fn-specforproviderprimarycontainerimageconfigwithrepositoryauthconfig)
        * [`fn withRepositoryAuthConfigMixin(repositoryAuthConfig)`](#fn-specforproviderprimarycontainerimageconfigwithrepositoryauthconfigmixin)
        * [`obj spec.forProvider.primaryContainer.imageConfig.repositoryAuthConfig`](#obj-specforproviderprimarycontainerimageconfigrepositoryauthconfig)
          * [`fn withRepositoryCredentialsProviderArn(repositoryCredentialsProviderArn)`](#fn-specforproviderprimarycontainerimageconfigrepositoryauthconfigwithrepositorycredentialsproviderarn)
    * [`obj spec.forProvider.vpcConfig`](#obj-specforprovidervpcconfig)
      * [`fn withSecurityGroupIds(securityGroupIds)`](#fn-specforprovidervpcconfigwithsecuritygroupids)
      * [`fn withSecurityGroupIdsMixin(securityGroupIds)`](#fn-specforprovidervpcconfigwithsecuritygroupidsmixin)
      * [`fn withSubnets(subnets)`](#fn-specforprovidervpcconfigwithsubnets)
      * [`fn withSubnetsMixin(subnets)`](#fn-specforprovidervpcconfigwithsubnetsmixin)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.providerRef`](#obj-specproviderref)
    * [`fn withName(name)`](#fn-specproviderrefwithname)
    * [`obj spec.providerRef.policy`](#obj-specproviderrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Model

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"ModelSpec defines the desired state of Model"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external when this managed resource is deleted - either \"Delete\" or \"Orphan\" the external resource."

## obj spec.forProvider



### fn spec.forProvider.withContainer

```ts
withContainer(container)
```

"Specifies containers in the inference pipeline. If not specified, the primary_container argument is required. Fields are documented below."

### fn spec.forProvider.withContainerMixin

```ts
withContainerMixin(container)
```

"Specifies containers in the inference pipeline. If not specified, the primary_container argument is required. Fields are documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withEnableNetworkIsolation

```ts
withEnableNetworkIsolation(enableNetworkIsolation)
```

"Isolates the model container. No inbound or outbound network calls can be made to or from the model container."

### fn spec.forProvider.withExecutionRoleArn

```ts
withExecutionRoleArn(executionRoleArn)
```

"A role that SageMaker can assume to access model artifacts and docker images for deployment."

### fn spec.forProvider.withInferenceExecutionConfig

```ts
withInferenceExecutionConfig(inferenceExecutionConfig)
```

"Specifies details of how containers in a multi-container endpoint are called. see Inference Execution Config."

### fn spec.forProvider.withInferenceExecutionConfigMixin

```ts
withInferenceExecutionConfigMixin(inferenceExecutionConfig)
```

"Specifies details of how containers in a multi-container endpoint are called. see Inference Execution Config."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withPrimaryContainer

```ts
withPrimaryContainer(primaryContainer)
```

"The primary docker image containing inference code that is used when the model is deployed for predictions.  If not specified, the container argument is required. Fields are documented below."

### fn spec.forProvider.withPrimaryContainerMixin

```ts
withPrimaryContainerMixin(primaryContainer)
```

"The primary docker image containing inference code that is used when the model is deployed for predictions.  If not specified, the container argument is required. Fields are documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withRegion

```ts
withRegion(region)
```

"Region is the region you'd like your resource to be created in."

### fn spec.forProvider.withTags

```ts
withTags(tags)
```

"Key-value map of resource tags."

### fn spec.forProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"Key-value map of resource tags."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withVpcConfig

```ts
withVpcConfig(vpcConfig)
```

"Specifies the VPC that you want your model to connect to. VpcConfig is used in hosting services and in batch transform."

### fn spec.forProvider.withVpcConfigMixin

```ts
withVpcConfigMixin(vpcConfig)
```

"Specifies the VPC that you want your model to connect to. VpcConfig is used in hosting services and in batch transform."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.container

"Specifies containers in the inference pipeline. If not specified, the primary_container argument is required. Fields are documented below."

### fn spec.forProvider.container.withContainerHostname

```ts
withContainerHostname(containerHostname)
```

"The DNS host name for the container."

### fn spec.forProvider.container.withEnvironment

```ts
withEnvironment(environment)
```

"Environment variables for the Docker container. A list of key value pairs."

### fn spec.forProvider.container.withEnvironmentMixin

```ts
withEnvironmentMixin(environment)
```

"Environment variables for the Docker container. A list of key value pairs."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.container.withImage

```ts
withImage(image)
```

"The registry path where the inference code image is stored in Amazon ECR."

### fn spec.forProvider.container.withImageConfig

```ts
withImageConfig(imageConfig)
```

"Specifies whether the model container is in Amazon ECR or a private Docker registry accessible from your Amazon Virtual Private Cloud (VPC). For more information see Using a Private Docker Registry for Real-Time Inference Containers. see Image Config."

### fn spec.forProvider.container.withImageConfigMixin

```ts
withImageConfigMixin(imageConfig)
```

"Specifies whether the model container is in Amazon ECR or a private Docker registry accessible from your Amazon Virtual Private Cloud (VPC). For more information see Using a Private Docker Registry for Real-Time Inference Containers. see Image Config."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.container.withMode

```ts
withMode(mode)
```

"The container hosts value SingleModel/MultiModel. The default value is SingleModel."

### fn spec.forProvider.container.withModelDataUrl

```ts
withModelDataUrl(modelDataUrl)
```

"The URL for the S3 location where model artifacts are stored."

## obj spec.forProvider.container.imageConfig

"Specifies whether the model container is in Amazon ECR or a private Docker registry accessible from your Amazon Virtual Private Cloud (VPC). For more information see Using a Private Docker Registry for Real-Time Inference Containers. see Image Config."

### fn spec.forProvider.container.imageConfig.withRepositoryAccessMode

```ts
withRepositoryAccessMode(repositoryAccessMode)
```

"Specifies whether the model container is in Amazon ECR or a private Docker registry accessible from your Amazon Virtual Private Cloud (VPC). Allowed values are: Platform and Vpc."

### fn spec.forProvider.container.imageConfig.withRepositoryAuthConfig

```ts
withRepositoryAuthConfig(repositoryAuthConfig)
```

"Specifies an authentication configuration for the private docker registry where your model image is hosted. Specify a value for this property only if you specified Vpc as the value for the RepositoryAccessMode field, and the private Docker registry where the model image is hosted requires authentication. see Repository Auth Config."

### fn spec.forProvider.container.imageConfig.withRepositoryAuthConfigMixin

```ts
withRepositoryAuthConfigMixin(repositoryAuthConfig)
```

"Specifies an authentication configuration for the private docker registry where your model image is hosted. Specify a value for this property only if you specified Vpc as the value for the RepositoryAccessMode field, and the private Docker registry where the model image is hosted requires authentication. see Repository Auth Config."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.container.imageConfig.repositoryAuthConfig

"Specifies an authentication configuration for the private docker registry where your model image is hosted. Specify a value for this property only if you specified Vpc as the value for the RepositoryAccessMode field, and the private Docker registry where the model image is hosted requires authentication. see Repository Auth Config."

### fn spec.forProvider.container.imageConfig.repositoryAuthConfig.withRepositoryCredentialsProviderArn

```ts
withRepositoryCredentialsProviderArn(repositoryCredentialsProviderArn)
```

"The Amazon Resource Name (ARN) of an AWS Lambda function that provides credentials to authenticate to the private Docker registry where your model image is hosted. For information about how to create an AWS Lambda function, see Create a Lambda function with the console in the AWS Lambda Developer Guide."

## obj spec.forProvider.executionRoleArnRef

"Reference to a Role in iam to populate executionRoleArn."

### fn spec.forProvider.executionRoleArnRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.executionRoleArnRef.policy

"Policies for referencing."

### fn spec.forProvider.executionRoleArnRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.executionRoleArnRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.executionRoleArnSelector

"Selector for a Role in iam to populate executionRoleArn."

### fn spec.forProvider.executionRoleArnSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference as the selecting object is selected."

### fn spec.forProvider.executionRoleArnSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.executionRoleArnSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.executionRoleArnSelector.policy

"Policies for selection."

### fn spec.forProvider.executionRoleArnSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.executionRoleArnSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.inferenceExecutionConfig

"Specifies details of how containers in a multi-container endpoint are called. see Inference Execution Config."

### fn spec.forProvider.inferenceExecutionConfig.withMode

```ts
withMode(mode)
```

"The container hosts value SingleModel/MultiModel. The default value is SingleModel."

## obj spec.forProvider.primaryContainer

"The primary docker image containing inference code that is used when the model is deployed for predictions.  If not specified, the container argument is required. Fields are documented below."

### fn spec.forProvider.primaryContainer.withContainerHostname

```ts
withContainerHostname(containerHostname)
```

"The DNS host name for the container."

### fn spec.forProvider.primaryContainer.withEnvironment

```ts
withEnvironment(environment)
```

"Environment variables for the Docker container. A list of key value pairs."

### fn spec.forProvider.primaryContainer.withEnvironmentMixin

```ts
withEnvironmentMixin(environment)
```

"Environment variables for the Docker container. A list of key value pairs."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.primaryContainer.withImage

```ts
withImage(image)
```

"The registry path where the inference code image is stored in Amazon ECR."

### fn spec.forProvider.primaryContainer.withImageConfig

```ts
withImageConfig(imageConfig)
```

"Specifies whether the model container is in Amazon ECR or a private Docker registry accessible from your Amazon Virtual Private Cloud (VPC). For more information see Using a Private Docker Registry for Real-Time Inference Containers. see Image Config."

### fn spec.forProvider.primaryContainer.withImageConfigMixin

```ts
withImageConfigMixin(imageConfig)
```

"Specifies whether the model container is in Amazon ECR or a private Docker registry accessible from your Amazon Virtual Private Cloud (VPC). For more information see Using a Private Docker Registry for Real-Time Inference Containers. see Image Config."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.primaryContainer.withMode

```ts
withMode(mode)
```

"The container hosts value SingleModel/MultiModel. The default value is SingleModel."

### fn spec.forProvider.primaryContainer.withModelDataUrl

```ts
withModelDataUrl(modelDataUrl)
```

"The URL for the S3 location where model artifacts are stored."

## obj spec.forProvider.primaryContainer.imageConfig

"Specifies whether the model container is in Amazon ECR or a private Docker registry accessible from your Amazon Virtual Private Cloud (VPC). For more information see Using a Private Docker Registry for Real-Time Inference Containers. see Image Config."

### fn spec.forProvider.primaryContainer.imageConfig.withRepositoryAccessMode

```ts
withRepositoryAccessMode(repositoryAccessMode)
```

"Specifies whether the model container is in Amazon ECR or a private Docker registry accessible from your Amazon Virtual Private Cloud (VPC). Allowed values are: Platform and Vpc."

### fn spec.forProvider.primaryContainer.imageConfig.withRepositoryAuthConfig

```ts
withRepositoryAuthConfig(repositoryAuthConfig)
```

"Specifies an authentication configuration for the private docker registry where your model image is hosted. Specify a value for this property only if you specified Vpc as the value for the RepositoryAccessMode field, and the private Docker registry where the model image is hosted requires authentication. see Repository Auth Config."

### fn spec.forProvider.primaryContainer.imageConfig.withRepositoryAuthConfigMixin

```ts
withRepositoryAuthConfigMixin(repositoryAuthConfig)
```

"Specifies an authentication configuration for the private docker registry where your model image is hosted. Specify a value for this property only if you specified Vpc as the value for the RepositoryAccessMode field, and the private Docker registry where the model image is hosted requires authentication. see Repository Auth Config."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.primaryContainer.imageConfig.repositoryAuthConfig

"Specifies an authentication configuration for the private docker registry where your model image is hosted. Specify a value for this property only if you specified Vpc as the value for the RepositoryAccessMode field, and the private Docker registry where the model image is hosted requires authentication. see Repository Auth Config."

### fn spec.forProvider.primaryContainer.imageConfig.repositoryAuthConfig.withRepositoryCredentialsProviderArn

```ts
withRepositoryCredentialsProviderArn(repositoryCredentialsProviderArn)
```

"The Amazon Resource Name (ARN) of an AWS Lambda function that provides credentials to authenticate to the private Docker registry where your model image is hosted. For information about how to create an AWS Lambda function, see Create a Lambda function with the console in the AWS Lambda Developer Guide."

## obj spec.forProvider.vpcConfig

"Specifies the VPC that you want your model to connect to. VpcConfig is used in hosting services and in batch transform."

### fn spec.forProvider.vpcConfig.withSecurityGroupIds

```ts
withSecurityGroupIds(securityGroupIds)
```



### fn spec.forProvider.vpcConfig.withSecurityGroupIdsMixin

```ts
withSecurityGroupIdsMixin(securityGroupIds)
```



**Note:** This function appends passed data to existing values

### fn spec.forProvider.vpcConfig.withSubnets

```ts
withSubnets(subnets)
```



### fn spec.forProvider.vpcConfig.withSubnetsMixin

```ts
withSubnetsMixin(subnets)
```



**Note:** This function appends passed data to existing values

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to create, observe, update, and delete this managed resource should be configured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.providerRef

"ProviderReference specifies the provider that will be used to create, observe, update, and delete this managed resource. Deprecated: Please use ProviderConfigReference, i.e. `providerConfigRef`"

### fn spec.providerRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerRef.policy

"Policies for referencing."

### fn spec.providerRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which contains a name, metadata and a reference to secret store config to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used for this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret. - Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a Secret to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource. This field is planned to be replaced in a future release in favor of PublishConnectionDetailsTo. Currently, both could be set independently and connection details would be published to both without affecting each other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."